WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 202545
Fix WebGL 1 conformance regressions when USE_ANGLE=1
https://bugs.webkit.org/show_bug.cgi?id=202545
Summary
Fix WebGL 1 conformance regressions when USE_ANGLE=1
James Darpinian
Reported
2019-10-03 15:17:23 PDT
Fix WebGL 1 conformance regressions when USE_ANGLE=1
Attachments
Fix WebGL 1 conformance regressions when USE_ANGLE=1
(6.93 KB, patch)
2019-10-03 15:19 PDT
,
James Darpinian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Darpinian
Comment 1
2019-10-03 15:19:52 PDT
Created
attachment 380163
[details]
Fix WebGL 1 conformance regressions when USE_ANGLE=1
James Darpinian
Comment 2
2019-10-03 15:23:33 PDT
After this patch plus a couple of upstream changes I'm working on in ANGLE, setting USE_ANGLE=1 on Mac fixes a bunch of WebGL conformance tests and causes no new test regressions.
WebKit Commit Bot
Comment 3
2019-10-03 20:48:18 PDT
Comment on
attachment 380163
[details]
Fix WebGL 1 conformance regressions when USE_ANGLE=1 Clearing flags on attachment: 380163 Committed
r250697
: <
https://trac.webkit.org/changeset/250697
>
WebKit Commit Bot
Comment 4
2019-10-03 20:48:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-10-03 20:49:16 PDT
<
rdar://problem/55972310
>
Darin Adler
Comment 6
2019-10-08 09:32:04 PDT
Comment on
attachment 380163
[details]
Fix WebGL 1 conformance regressions when USE_ANGLE=1 View in context:
https://bugs.webkit.org/attachment.cgi?id=380163&action=review
> Source/WebCore/html/canvas/WebGLDebugShaders.cpp:54 > if (m_context.isContextLost()) > return String();
Since this function can no longer return null, it doesn’t make sense to return a null string here. Before the change to the bindings, this would turn into a JavaScript null, so this line of code may have had a valuable effect. We should consider returning an empty string here. Or perhaps removing this code entirely as long as the validateWebGLObject function is guaranteed to return false when the context is lost.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug