Fix WebGL 1 conformance regressions when USE_ANGLE=1 https://bugs.webkit.org/show_bug.cgi?id=202545

Prevent ANGLE from automatically using ES3 when ES2 is requested.

WEBGL_debug_shaders extension should not accept or return null.

Enable ANGLE's new support for emulating RGB on RGBA IOSurfaces.

Patch by James Darpinian <jdarpinian@chromium.org> on 2019-10-03
Reviewed by Alex Christensen.

* html/canvas/WebGLDebugShaders.cpp:
(WebCore::WebGLDebugShaders::getTranslatedShaderSource):
* html/canvas/WebGLDebugShaders.h:
* html/canvas/WebGLDebugShaders.idl:
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::validateVertexAttributes):
* platform/graphics/angle/Extensions3DANGLE.cpp:
(WebCore::Extensions3DANGLE::getTranslatedShaderSourceANGLE):
* platform/graphics/cocoa/GraphicsContext3DCocoa.mm:
(WebCore::GraphicsContext3D::GraphicsContext3D):
* platform/graphics/cocoa/WebGLLayer.mm:
(-[WebGLLayer allocateIOSurfaceBackingStoreWithSize:usingAlpha:]):

Canonical link: https://commits.webkit.org/216038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250697 268f45cc-cd09-0410-ab3c-d52691b4dbfc