Source/WebCore/platform/graphics/angle/Extensions3DANGLE.cpp
@@ -111,7 +111,8 @@ String Extensions3DANGLE::getTranslatedShaderSourceANGLE(Platform3DObject shader
     gl::GetTranslatedShaderSourceANGLE(shader, sourceLength, &returnedLength, name.data());
     if (!returnedLength)
         return emptyString();
-    ASSERT(returnedLength == sourceLength);
+    // returnedLength does not include the null terminator.
+    ASSERT(returnedLength == sourceLength - 1);
     return String(name.data(), returnedLength);
 }
 
